Header submenu align quick fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
@@ -70,7 +70,7 @@
                 }
             }
 
-            &.submenu {
+            .submenu {
                 text-align: left;
             }
 
